[tool.poetry]
name = "tutors-lib"
version = "1.0.0"
description = "Python version of Tutors"
authors = ["Emma Kidney <ekidney@redhat.com>" , "Ben Capper <bcapper@redhat.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"
importlib-metadata = {version = "^4.8.1", python = "<3.8"}
PyYAML = "^6.0"
powpow = "^0.0.4"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
pytest = "^6.2.5"
pytest-black = "^0.3.12"
pytest-flake8 = "^1.0.7"
pytest-isort = "^2.0.0"
tox = "^3.24.4"
flake8 = "^3.9.2"

[tool.pytest.ini_options]
addopts = "--black --flake8 --isort"
flake8-max-line-length = 100

[tool.isort]
line_length = 100

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"